[project]
name = "ex1"
version = "0.1.0"
description = "Poetry_ex1"
authors = [
    {name = "Oussama",email = "oussama.samet@learner.42.tech"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "matplotlib>=3.10.8"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false